# battlecode-2018

./: .coveralls.yml  .dockerignore  .gitignore  .travis.yml  :wq  Cargo.toml  JavaDockerfile  LinuxBuildDockerfile  Makefile  ManagerDockerfile  ManagerDockerfile2  Python3Dockerfile  README.md  SandboxDockerfile  SandboxEverythingDockerfile  TODO.txt  battlecode.bat  battlecode.sh  build-release.bat  build.bat  colors.mk  copy-artifacts.bat  helpers.mk  make-release.sh  run.bat  run.sh  run_all_tests.sh  run_nodocker.bat  run_nodocker.sh
.circleci/: README.md  config.yml
battlecode-engine/: .gitignore  Cargo.toml  run_tests.sh
battlecode-engine-c/: .gitignore  Cargo.toml  README.md  build.rs  run_tests.sh
battlecode-engine-c/ctests/: Makefile  c_test.c
battlecode-engine-c/src/: conversions.rs  lib.rs  macros.rs
battlecode-engine-c/tests/: run_ctests.rs
battlecode-engine/benches/: quadtree.rs
battlecode-engine/examples/: badplayer.rs  jamesplayer.rs  runner.rs
battlecode-engine/src/: config.rs  constants.rs  controller.rs  engine.rs  entity.rs  error.rs  id_generator.rs  lib.rs  location.rs  map.rs  quadtree.rs  research.rs  robot.rs  rockets.rs  schema.rs  spatialhashmap.rs  stream-client.rs  team_array.rs  unit.rs  world.rs
battlecode-engine/src/common/: direction.rs  map_location.rs  mod.rs
battlecode-engine/src/controller/: mod.rs  streams.rs
battlecode-engine/src/map/: bananas.bc18t  fat.bc18t  mapparser.rs  mod.rs  tall.bc18t
battlecode-engine/src/unit/: factory.rs  healer.rs  knight.rs  mage.rs  mod.rs  ranger.rs  rocket.rs  worker.rs
(+326 files in other folders)
